--- a/docs/论文阅读/总览.md
+++ b/docs/论文阅读/总览.md
@@ -2,9 +2,8 @@
 
 
 
-> 仓库链接:[morning-hao/paper-mark: 记录一些自己读过且觉得有意义的论文 (github.com)](https://github.com/morning-hao/paper-mark)
+> PDF仓库链接:[morning-hao/paper-mark: 记录一些自己读过且觉得有意义的论文 (github.com)](https://github.com/morning-hao/paper-mark)
 >
-> 在线笔记:[总览.md - 一点笔记 (morning-hao.github.io)](https://morning-hao.github.io/github-page/论文阅读/总览/)
 
 # 总览链接
 
