--- a/docs/论文阅读/总览.md
+++ b/docs/论文阅读/总览.md
@@ -12,10 +12,10 @@
 
 | 注解PDF                                                      | 简要笔记                                                     | 试着说出来 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---------- |
+| [1810.04805-bert.pdf](https://github.com/morning-hao/paper-mark/blob/main/1810.04805-bert.pdf) | [2018-bert.md - 一点笔记 (morning-hao.github.io)](https://morning-hao.github.io/github-page/论文阅读/2018-bert/) |            |
 | [2106.09685-LORA.pdf](https://github.com/eat-or-eat/paper-mark/blob/main/2106.09685-LORA.pdf) | [2021-LoRA.md - 一点笔记 (morning-hao.github.io)](https://morning-hao.github.io/github-page/论文阅读/2021-LoRA/) |            |
 | [2110.07602v3-P-tuning2.pdf](https://github.com/eat-or-eat/paper-mark/blob/main/2110.07602v3-P-tuning2.pdf) | [2021-P-tuning2.md - 一点笔记 (morning-hao.github.io)](https://morning-hao.github.io/github-page/论文阅读/2021-P-tuning2/) |            |
-|                                                              |                                                              |            |
-|                                                              |                                                              |            |
+| [2212.10560-self-instruct.pdf](https://github.com/morning-hao/paper-mark/blob/main/2212.10560-self-instruct.pdf) |                                                              |            |
 |                                                              |                                                              |            |
 |                                                              |                                                              |            |
 |                                                              |                                                              |            |
